Fix: stop navbar overflowing on iOS 9.2

--- a/src/ishi/20-components/styles/_navbar.scss
+++ b/src/ishi/20-components/styles/_navbar.scss
@@ -1,5 +1,6 @@
 nav.navbar {
-    display: inline-block;
+    display: block;
+    overflow: hidden;
 }
 
 nav.navbar, div.navbar_dropdown {
