--- a/src/ishi/40-structure/common/_header.scss
+++ b/src/ishi/40-structure/common/_header.scss
@@ -1,3 +1,7 @@
+body header {
+    overflow-x: hidden;
+}
+
 body header:nth-child(1) {
     background-color: $header-bg-color;
 
